Z-index control for workspace draggable actions while in sticky mode. Fixes #232 workspace focus.

--- a/restcomm/restcomm.rvd/src/main/webapp/css/rvd.css
+++ b/restcomm/restcomm.rvd/src/main/webapp/css/rvd.css
@@ -564,7 +564,10 @@ textarea.medium {
 
 .sticky-workspace{
 	float:right;
-	z-index:-1;
+}
+
+.sticky-draggable-workspace{
+	z-index: -1;
 }
 
 
